Accomodation mobile fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: var(--font-bemore), serif;
-  background-color: black;
+  background-color: #121212;
 }
 
 .noxa-gothic {
@@ -123,23 +123,20 @@ body {
   background-repeat: no-repeat;
 }
 
-/* Responsive adjustments for accommodation background */
-@media (max-width: 1024px) {
-  .background-layers-6 {
-    background: url("/optimised/compete_bg.jpg") center center / cover no-repeat;
-  }
-}
-
-@media (max-width: 768px) {
-  .background-layers-6 {
-    background-size: contain;
-  }
-}
-
 /* accommodation background */
 .background-layers-6 {
-  background: url("/optimised/compete_bg.jpg") center center / cover no-repeat;
+  height: 90vh;
+  width: 100%;
+  background: url("/optimised/compete_bg.jpg") center top / auto 100vh no-repeat;
   background-size: 120%;
+}
+
+/* Responsive adjustments for accommodation background */
+@media (max-width: 768px) {
+  .background-layers-6 {
+    background: url("/optimised/compete_bg.jpg") center top / auto 100vh
+      no-repeat;
+  }
 }
 
 /* Responsive adjustments for FAQ background */
